# AI-Outreach-Agent

./: README.md  main.py  model.py  pyproject.toml  requirements.txt  settings.py
My_agents/: copywriter_pro.py  discovery_agent.py  discovery_agent_test.py  outreach_manager.py  sender_agent.py
data/: cleaned.json  prospects_test.json  real_prospects.json
